# Task1

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/beginner_pacakage/: _setup_util.py  local_setup.sh  setup.sh
devel/.private/beginner_pacakage/lib/beginner_pacakage/: talk.py
devel/.private/beginner_pacakage/lib/pkgconfig/: beginner_pacakage.pc
devel/.private/beginner_pacakage/share/beginner_pacakage/cmake/: beginner_pacakageConfig.cmake
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/lib/beginner_pacakage/: listen.py  talk.py
devel/lib/pkgconfig/: beginner_pacakage.pc  catkin_tools_prebuild.pc
devel/share/beginner_pacakage/cmake/: beginner_pacakageConfig-version.cmake  beginner_pacakageConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
logs/beginner_pacakage/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.002.log.stderr  build.check.003.log.stderr
src/beginner_pacakage/: CMakeLists.txt  package.xml
src/beginner_pacakage/scripts/: talk.py
src/beginner_pacakage/src/: talk.py
